--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button id ="new-btn">New Game </button>
   </div>
   <main>
-    <h1>___Tic Tac Toe game___</h1>
+    <h1>Tic Tac Toe Game</h1>
     <div class = " container ">
     <div class = " game">
       <button class = " box "></button>
